# spottyfi-imgui

./: Cargo.toml
src/: commands.rs  constants.rs  event.rs  main.rs  utils.rs
src/api/: constants.rs  data.rs  error.rs  mod.rs  utils.rs
src/api/enums/: search.rs
src/api/models/: mod.rs  recommendations.rs  search.rs  user.rs
src/api/providers/: mod.rs  oauth2.rs
src/imgui_additions/: mod.rs  sidebar.rs
src/state/: developer.rs  mod.rs  panes.rs  preferences.rs  search.rs
src/widget/: flex.rs  font.rs  mod.rs  preferences.rs  style.rs  theme.rs
src/widget/actions/: search.rs
src/widget/components/: async_image.rs  card.rs  error.rs  layout.rs  menubar.rs  mod.rs  player.rs  sidebar.rs
src/widget/components/modals/: about.rs  mod.rs
src/widget/components/panes/: home.rs  mod.rs  preferences.rs  search.rs
src/widget/fonts/: inter.rs
src/widget/icons/: mod.rs  set.rs
src/widget/state/: mod.rs  panes.rs  preferences.rs
