[package]
name = "spottyfi-imgui"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
chrono = "0.4.38"
dark-light = "1.1.1"
dconf_rs = "0.3.0"
detect-desktop-environment = "1.1.0"
directories = "5.0.1"
easy-imgui = { git = "https://github.com/kierandrewett/easy-imgui-rs", features = ["docking"] }
easy-imgui-renderer = { git = "https://github.com/kierandrewett/easy-imgui-rs" }
easy-imgui-window = { git = "https://github.com/kierandrewett/easy-imgui-rs" }
image = "0.25.2"
lazy_static = "1.5.0"
librespot = "0.4.2"
merge-struct = "0.1.0"
num = "0.4.3"
open = "5.3.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_merge = "0.1.3"
stretch = "0.3.2"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = "1.39.3"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
